fix image size on mobile screen sizes

--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -231,7 +231,11 @@ button[aria-expanded="false"] > .close {
 }
 @media (max-width: 575px) {
   .img {
-    width: auto;
+    width: 292px;
+    height: 292px;
+  }
+  .card-frame {
+    width: 320px;
     height: auto;
   }
 }
